# Progetto_PCS_FMV

./: .gitignore  README.md
3rd_party_libraries/: CMakeLists.txt
Projects/Raffinamento/: CMakeLists.txt  README.md  main_program.cpp  main_test.cpp
Projects/Raffinamento/Dataset/Case1/Input/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case1/Output/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case1_1/Input/: Cell0Ds.csv  Cell1Ds.csv
Projects/Raffinamento/Dataset/Case1_2/Input/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case1_2/Output/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case2/Input/: Cell0Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case2/Output/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Case3_1/Output/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/GeneralTest/: Cell0Ds.csv
Projects/Raffinamento/Dataset/InitMeshTest/: Cell0Ds.csv  Cell1Ds.csv
Projects/Raffinamento/Dataset/SortingTest/: Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Test1/: Nuovo documento di testo.txt
Projects/Raffinamento/Dataset/Test2/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Dataset/Test2Modified/: Cell0Ds.csv  Cell1Ds.csv
Projects/Raffinamento/Input/: arg.txt
Projects/Raffinamento/Output/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Projects/Raffinamento/Ploter/: main.py
Projects/Raffinamento/Ploter/PollterDataTest/: Cell2Ds.csv
Projects/Raffinamento/src/: CMakeLists.txt  RefineMesh.cpp  TriangleVector_class.cpp  TriangleVector_class.hpp  Triangle_class.cpp  Triangle_class.hpp  TriangularMesh_class.cpp  TriangularMesh_class.hpp  empty_class.cpp  empty_class.hpp
Projects/Raffinamento/test/: CMakeLists.txt  test_RefineMesh.hpp  test_TriangleVector_class.hpp  test_Triangle_class.hpp  test_TriangularMesh_class.hpp  test_empty.hpp
